# first-py-task

./: .gitignore  README.md  pyproject.toml  заметки.txt
src/first_py_task/: main.py
