[project]
name = "first-py-task"
version = "0.1.0"
description = ""
authors = [
    {name = "Qwerty123-25",email = "ntru7108@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)"
]

[tool.poetry]
packages = [{include = "first_py_task", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
